--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.18.4",
     "@aws-amplify/ui-react": "^6.0.3",
     "aws-amplify": "^6.0.5",
-    "chart.js": "^4.4.0",
-    "next": "14.0.3",
+    "dotenv": "^16.3.1",
+    "next": "^14.0.3",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-quill": "^2.0.0"
+    "webpack": "^5.89.0"
   },
   "devDependencies": {
     "@types/node": "^20",
