--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@auth/core": "^0.18.4",
-    "@aws-amplify/ui-react": "^6.0.3",
-    "aws-amplify": "^6.0.5",
+    "bootstrap": "^5.3.2",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "next": "^14.0.3",
     "next-auth": "^5.0.0-beta.4",
@@ -20,6 +20,7 @@
     "webpack": "^5.89.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
