--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
    "singleQuote": true,
    "tabWidth": 3,
    "semi": false,
-   "useTabs": false,
+   "useTabs": true,
    "tsxSingleQuote": true,
    "jsxSingleQuote": true,
    "tsxBracketSameLine": false
